--- a/demo/package.json
+++ b/demo/package.json
@@ -4,14 +4,21 @@
   "readme": "NativeScript Application",
   "repository": "<fill-your-repository-here>",
   "nativescript": {
-    "id": "org.nativescript.demo"
+    "id": "org.nativescript.demo",
+    "tns-android": {
+      "version": "2.4.1"
+    }
   },
   "dependencies": {
-    "nativescript-nativescript-image-cache-media": "file:..",
+    "nativescript-image-cache-media": "file:..",
     "nativescript-theme-core": "^0.2.1",
     "tns-core-modules": "2.4.0"
   },
   "devDependencies": {
+    "babel-traverse": "6.19.0",
+    "babel-types": "6.19.0",
+    "babylon": "6.14.1",
+    "lazy": "1.0.11",
     "nativescript-dev-android-snapshot": "^0.*.*"
   }
 }
